# svn2git

./: LICENSE  setup.cfg
svn3git/: __main__.py  containers.py  converter.py  exceptions.py  utils.py
