[metadata]
name = svn3git
version = 0.0.6
author = Manuel Stingl
description = Extensively convert SVN to Git repository
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Topic :: Utilities

[options]
zip_safe = false
python_requires = >=3.10
packages = find:
include_package_data = true
install_requires =
    GitPython
    svn
    rich
    questionary
    typer
